# digimon-sec

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup-digimon-1_2.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
corporate/: block8_intelligence_integration_conversion.md  manifest.yaml
corporate/fractal_axiom/: LICENSE  pyproject.toml
corporate/fractal_identity/: pyproject.toml
corporate/fractal_mask/: pyproject.toml
corporate/fractal_report/: README.md  pyproject.toml
corporate/fractal_sso/: pyproject.toml
corporate/fractal_veil/: pyproject.toml
corporate/geodesic_cipher/: pyproject.toml
corporate/geodesic_directory/: pyproject.toml
corporate/geodesic_identity/: pyproject.toml
corporate/geodesic_ledger/: pyproject.toml
corporate/geodesic_network/: CHANGELOG.md  README.md  pyproject.toml
corporate/geodesic_session/: pyproject.toml
corporate/geodesic_strategy/: README.md  pyproject.toml
corporate/geodesic_strategy/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/geodesic_strategy/examples/: README.md  basic_usage.py
corporate/geodesic_strategy/src/geodesic_strategy/: __init__.py  core.py  models.py
corporate/geodesic_strategy/tests/: conftest.py  test_core.py
corporate/helix_biometric/: pyproject.toml
corporate/helix_filter/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_incident/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_notify/: README.md  pyproject.toml
corporate/helix_standard/: pyproject.toml
corporate/helix_trace/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_vault/: pyproject.toml
corporate/hyperplane_bridge/: README.md  pyproject.toml
corporate/hyperplane_bridge/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/hyperplane_bridge/examples/: README.md  basic_usage.py
corporate/hyperplane_bridge/src/hyperplane_bridge/: __init__.py  core.py  models.py
corporate/hyperplane_bridge/tests/: conftest.py  test_core.py
corporate/hyperplane_crawl/: pyproject.toml
corporate/hyperplane_guard/: pyproject.toml
corporate/lattice_permission/: pyproject.toml
corporate/lattice_policy/: CHANGELOG.md  README.md  (+1 more)
corporate/lemniscate_compliance/: README.md  pyproject.toml
corporate/lemniscate_compliance/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/lemniscate_compliance/examples/: README.md  basic_usage.py
corporate/lemniscate_compliance/src/lemniscate_compliance/: __init__.py  core.py  models.py
corporate/lemniscate_compliance/tests/: conftest.py  test_core.py
examples/: integrated_pipeline.py
shared/: __init__.py  pipeline.py
tests/: test_integration.py
tools/: corporate_presentation_content.yaml  generate_block5_assets.py  generate_block8_assets.py  generate_docs.py  generate_examples.py  generate_presentaciones_corporativas.py  refactor_modules.py  test_all_digimons.py  test_all_digimons.sh  test_all_modules.py  test_all_modules.sh
(+1331 files in other folders)
