[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "geodesic_strategy"
version = "3.0.0"
description = "Planifica estrategia de seguridad y roadmap de capacidades priorizadas. (Production)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kirtan Teg Singh", email = "security@snocomm.dev"}]
requires-python = ">=3.10"
keywords = ["cybersecurity", "snocomm", "strategic-planner", "geodesic_strategy"]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.4.0", "isort>=5.12.0"]

[project.urls]
Homepage = "https://github.com/snocomm-security/snocomm-security-suite"
Repository = "https://github.com/snocomm-security/snocomm-security-suite/tree/main/corporate/geodesic_strategy"

[tool.poetry]
packages = [{include = "geodesic_strategy", from = "src"}]
